--- a/README
+++ b/README
@@ -9,6 +9,9 @@
 - SQLite (через стандартную библиотеку)
 
 ## 💡 Функции:
+- Поиск пары и общение с ней
+- Возможность администрирования новых профилей
+- Возможность пополнить свой баланс и пожертвовать ему другому пользователю
 - Пользователь создаёт тикет через `/start`
 - Саппорт может взять тикет и начать общение
 - Обе стороны видят сообщения друг друга
@@ -16,5 +19,5 @@
 - Диалог нельзя создать заново, пока предыдущий не завершён
 - Все активные заявки хранятся в базе данных
 
-## 🚀 Как запустить:
-1. Клонировать репозиторий:
+
+
